# ndi-rs

./: Cargo.toml  LICENSE  LICENSE-MIT  README.md  README_crate.md  build.rs  wrapper.h
examples/: Cargo.toml  data_lifetime.rs  main.rs  multithread.rs
examples/src/: data_lifetime.rs  multithread.rs  recv.rs
ndi/: Cargo.toml  LICENSE  README.md  build.rs
ndi-examples/: Cargo.toml
ndi-examples/src/: data_lifetime.rs  multithread.rs  recv.rs  save_recv.rs  send.rs
ndi/src/: error.rs  find.rs  lib.rs  recv.rs  send.rs
ndi/src/internal/: bindings_linux.rs  mod.rs
src/: error.rs  find.rs  lib.rs  recv.rs  send.rs
src/internal/: bindings.rs  mod.rs
xtask/: Cargo.toml
xtask/src/: flags.rs  main.rs
