[package]
name = "ndi-rs"
version = "0.1.0"
authors = ["sp4ghet <sp4ghet@gmail.com>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[build-dependencies]
bindgen = "0.53.1"

[[example]]
name = "main"
