[package]
name = "ndi-examples"
version = "0.0.0"

[[bin]]
name = "recv"
path = "src/recv.rs"

[[bin]]
name = "multithread"
path = "src/multithread.rs"

[[bin]]
name = "data_lifetime"
path = "src/data_lifetime.rs"

[[bin]]
name = "save_recv"
path = "src/save_recv.rs"

[[bin]]
name = "send"
path = "src/send.rs"

[dependencies]
ndi = { path = "../ndi" }
image = "0.23"
