[package]
name = "ndi"
version = "0.1.2"
description = "NewTek NDI bindings for rust"
authors = ["sp4ghet <sp4ghet@gmail.com>"]
homepage = "https://github.com/sp4ghet/ndi-rs"
repository = "https://github.com/sp4ghet/ndi-rs"
edition = "2018"
license-file = "LICENSE"
categories = ["multimedia"]
keywords = ["ndi", "newtek", "network", "video", "audio"]
build = "build.rs"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]

[dependencies]

[build-dependencies]
